--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "games_library",
-  "private": true,
+  "name": "space_exploration",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
