--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://gromkonadezhda.github.io/space_exploration/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -18,6 +21,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
